fix manufacturing low-contrast colours

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/accessibility-features.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/accessibility-features.less
@@ -190,12 +190,6 @@ html#adobeguides-dark-contrast {
         saturate(4907%) hue-rotate(33deg) brightness(115%) contrast(91%) !important;
     }
   }
-  .toolsection__left{
-    img {
-      filter: brightness(1) saturate(100%) invert(27%) sepia(25%)
-        saturate(4907%) hue-rotate(33deg) brightness(115%) contrast(91%) !important;
-    }
-  }
   .toolbar-container
     .toolbar-topic.desktop
     .toolsection__left
