--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/custom-container.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/custom-container.less
@@ -201,6 +201,13 @@
         }
       }
     }
+    @media (min-width: 1484px) {
+      .col-3grid {
+        &--left {
+          padding: 1.25rem 0 5.3rem;
+        }
+      }
+    }
   }
 }
 @media (min-width: 1024px) {
